add inst.Methods of openRasp

--- a/rasp/conf/openrasp.yml
+++ b/rasp/conf/openrasp.yml
@@ -44,7 +44,7 @@
 #  - "weblogic1"
 #  - "weblogic123"
 #  - "welcome1"
-hooks.ignore: 
+hooks.ignore: all 
 # debug.level: 0
 #hook.white:
 #  "localhost:8080/vulns/011-ssrf-commons-httpclient.jsp":
@@ -62,10 +62,10 @@ inject.custom_headers:
 
 # <response to malicious requests>
 # 
-# block.redirect_url: "https://rasp.baidu.com/blocked/?request_id=%request_id%"
-# block.content_json: "{\"error\":true, \"reason\": \"Request blocked by OpenRASP\", \"request_id\": \"%request_id%\"}"
-# block.content_xml: "<?xml version=\"1.0\"?><doc><error>true</error><reason>Request blocked by OpenRASP</reason><request_id>%request_id%</request_id></doc>"
-# block.content_html: "</script><script>location.href=\"https://rasp.baidu.com/blocked2/?request_id=%request_id%\"</script>"
+block.redirect_url: "https://rasp.baidu.com/blocked/?request_id=%request_id%"
+block.content_json: "{\"error\":true, \"reason\": \"Request blocked by OpenRASP\", \"request_id\": \"%request_id%\"}"
+block.content_xml: "<?xml version=\"1.0\"?><doc><error>true</error><reason>Request blocked by OpenRASP</reason><request_id>%request_id%</request_id></doc>"
+block.content_html: "</script><script>location.href=\"https://rasp.baidu.com/blocked2/?request_id=%request_id%\"</script>"
 
 # <remote management>
 #
