--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,14 @@
         "memory_resource": "cpp",
         "random": "cpp",
         "string": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp",
+        "shared_mutex": "cpp",
+        "thread": "cpp",
+        "set": "cpp"
     }
 }
